core-plugins/src/test/resources/scraper/test/plugins/core/typechecker/ok/enrich2.yf
---
name: echo
graphs:
  start:
    - type: Echo
      put: actdetail
      value: ["hello"]

    - type: Echo
      put: enriched
      value:
        id: "[actdetail^0]"


