core-plugins/src/test/resources/scraper/test/plugins/core/typechecker/fail/complexobject.yf
---
name: complex
graphs:
  start:
    - type: Echo
      put: obj
      value:
        str: "I'm a string"
        list: ["I'm a list"] # not possible without records

